# insa-login-rememberer

./: Cargo.toml  README.md  build.sh  manifest_v2.json  manifest_v3.json  updates.json
pkg/: version-1.0.xpi
src/: lib.rs  util.rs
