[package]
name = "insa-login-rememberer"
version = "0.1.0"
authors = ["Mubelotix <mubelotix@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "Storage",
    "Document",
    "Element",
    "HtmlInputElement",
]